# TaskR

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  meson.build  meson_options.txt
examples/: meson.build
examples/abcTasks/: meson.build
examples/abcTasks/cpp/: abcTasks.hpp  nosv.cpp  pthreads.cpp
examples/abcTasks/python/: abcTasks.py  main.py
examples/abcTasks/source/: abcTasks.hpp  main.cpp
examples/cholesky/: meson.build  utils.hpp
examples/cholesky/ompss/: cholesky.hpp  init.hpp  main.cpp  meson.build  verify.hpp
examples/cholesky/sequential/: init.hpp  meson.build  verify.hpp
examples/cholesky/source/: cholesky.hpp  init.hpp  pthreads.cpp  verify.hpp
examples/conditionVariable/: meson.build
examples/conditionVariable/cpp/: conditionVariableWait.hpp  conditionVariableWaitCondition.hpp  conditionVariableWaitFor.hpp  conditionVariableWaitForCondition.hpp  nosv.cpp  pthreads.cpp
examples/conditionVariable/python/: conditionVariableWait.py  conditionVariableWaitCondition.py  conditionVariableWaitFor.py  conditionVariableWaitForCondition.py  main.py
examples/conditionVariable/source/: conditionVariable.hpp
examples/distributed/: meson.build
examples/distributed/debugInfo/: README.rst  meson.build
examples/distributed/debugInfo/source/: main.cpp
examples/distributed/jacobi3d/: .gitignore  Makefile  README.md  meson.build  run_test.sh
examples/distributed/jacobi3d/mate/: .gitignore  Makefile  grid.cpp  grid.hpp  jacobi.cpp
examples/distributed/jacobi3d/mpi/: grid.cpp  grid.hpp  jacobi  jacobi.cpp
examples/distributed/jacobi3d/source/: grid.cpp  grid.hpp  jacobi.cpp  nosv.cpp  pthreads.cpp  task.hpp
examples/distributed/jacobi3d/taskr/: .gitignore  Makefile  grid.cpp  grid.hpp  jacobi.cpp
examples/distributed/pingPong/: README.rst  meson.build
examples/distributed/pingPong/source/: main.cpp
examples/energySaver/: README.rst  meson.build
examples/energySaver/cpp/: nosv.cpp  pthreads.cpp
examples/energySaver/python/: energySaver.py  main.py
examples/energySaver/source/: main.cpp
examples/fibonacci/: meson.build
examples/fibonacci/cpp/: fibonacci.hpp
examples/fibonacci/python/: fibonacci.py  fibonacci_mutex.py  main.py
examples/fibonacci/source/: fibonacci.hpp  main.cpp
examples/getCurrentTask/: README.rst  meson.build
examples/getCurrentTask/source/: main.cpp
examples/jacobi3d/: meson.build
examples/jacobi3d/mpi/: Makefile  grid.cpp  grid.hpp  jacobi.cpp
examples/jacobi3d/source/: grid.cpp  grid.hpp  jacobi3d.hpp  nosv.cpp  pthreads.cpp  run_all_lpf.sh  run_all_mpi.sh  task.hpp
examples/local/: meson.build
examples/local/abcTasks/: meson.build
examples/local/abcTasks/py_source/: main.py
examples/local/abcTasks/source/: abcTasks.hpp  main.cpp  nosv.cpp  pthreads.cpp
examples/local/cholesky/: meson.build  utils.hpp
examples/local/cholesky/ompss/: cholesky.hpp  init.hpp  main.cpp  meson.build  verify.hpp
examples/local/cholesky/sequential/: cholesky.hpp  init.hpp  main.cpp  meson.build  verify.hpp
examples/local/cholesky/source/: cholesky.hpp  init.hpp  main.cpp  nosv.cpp  pthreads.cpp  verify.hpp
examples/local/conditionVariable/: meson.build
examples/local/conditionVariable/py_source/: conditionVariableWait.py  conditionVariableWaitFor.py  conditionVariableWaitForCondition.py  main.py
examples/local/conditionVariable/source/: conditionVariable.hpp  conditionVariableWait.hpp  conditionVariableWaitCondition.hpp  conditionVariableWaitFor.hpp  conditionVariableWaitForCondition.hpp  main.cpp  nosv.cpp  pthreads.cpp
examples/local/energySaver/: meson.build
examples/local/energySaver/py_source/: energySaver.py  main.py
examples/local/energySaver/source/: main.cpp  nosv.cpp  pthreads.cpp
examples/local/fibonacci/: meson.build
examples/local/fibonacci/source/: main.cpp  (+3 more)
examples/local/getCurrentTask/: meson.build
examples/local/manyParallel/: meson.build
examples/local/mmm/: README.rst  meson.build
examples/local/multiJob/: meson.build
examples/local/mutex/: meson.build
examples/local/pendingOperation/: meson.build
examples/local/resourceList/: meson.build
examples/local/simple/: meson.build
examples/local/suspend/: meson.build
examples/local/workerSpecific/: meson.build
examples/manyParallel/: README.rst  meson.build
examples/manyParallel/cpp/: manyParallel.hpp  nosv.cpp
examples/manyParallel/python/: main.py  manyParallel.py
examples/matmul/: README.rst  meson.build
examples/matmul/python/: main.py  matmul.cpp  matmul.py
examples/multiJob/: meson.build
examples/multiJob/cpp/: job1.cpp  job2.cpp  nosv.cpp  pthreads.cpp
examples/multiJob/python/: job1.py  job2.py  main.py
examples/multiJob/source/: job1.cpp  job2.cpp  jobs.hpp  main.cpp
examples/mutex/: meson.build
examples/mutex/cpp/: mutex.hpp  nosv.cpp
examples/mutex/python/: main.py  mutex.py
examples/mutex/source/: main.cpp  mutex.hpp
examples/pendingOperation/: README.rst  meson.build
examples/pendingOperation/cpp/: nosv.cpp  pendingOperation.hpp  pthreads.cpp
examples/pendingOperation/python/: main.py  pendingOperation.py
examples/resourceList/: README.rst  meson.build
examples/resourceList/cpp/: nosv.cpp  pthreads.cpp  workTask.hpp
examples/resourceList/python/: main.py  workTask.py
examples/resourceList/source/: main.cpp
examples/simple/: meson.build
examples/simple/cpp/: simple.hpp
examples/simple/python/: main.py  simple.py
examples/sleepsort/: meson.build
examples/sleepsort/python/: main.py
examples/suspend/: README.rst  meson.build
examples/suspend/cpp/: nosv.cpp  pthreads.cpp  suspend.hpp
examples/suspend/python/: main.py  suspend.py
examples/workerSpecific/: README.rst  meson.build
examples/workerSpecific/cpp/: pthreads.cpp  workerSpecific.hpp
examples/workerSpecific/python/: main.py  workerSpecific.py
include/pytaskr/: README.md  matmul.cpp  meson.build  mmm.cpp  pyruntime.hpp  pytaskr.cpp  pytaskr.hpp
source/: meson.build  tasking.cpp
tests/: dispatcher.cpp  meson.build  pyruntime.cpp  pyruntime_test.cpp  task.cpp  worker.cpp
(+98 files in other folders)
