option('distributedEngine', type : 'combo',
       choices : [ 'mpi', 'lpf', 'none' ], 
       description : 'Specifies which engine (if any) to use for distributed computing examples',
       value: 'none'
       )

option('buildTests', type : 'boolean', value : false,
       description: 'Indicates whether to build tests'
)

option('buildExamples', type : 'boolean', value : false,
       description: 'Indicates whether to build example apps'
)

option('buildInstrumentations', type: 'array', 
       choices : ['task', 'thread', 'none'],
       description: 'Indicates whether to build the instrumentations (DetectR). Default is "none". "task" means task level instrumentation and "thread" means thread level instrumentation',
       value : ['none'],
)

option('compileWarningsAsErrors', type : 'boolean', value : false,
       description: 'Indicates whether a compilation warning should result in a fatal error. This is useful for CI testing but may result in inconveniences for normal users, hence it should be false by default'
) 
