option('distributedEngines', type : 'array',
       choices : [ 'mpi', 'lpf', 'none' ], 
       description : 'Specifies which engines (if any) to use for distributed computing examples',
       value: ['none']
       )

option('executionStateType', type : 'array',
       choices : ['boost', 'nosv'],
       description : 'Specifies which HiCR backend to use for the tasks (i.e. executionStates) of the examples. Default: boost',
       value: ['boost']
)

option('processingUnitType', type : 'array',
       choices : ['pthreads', 'nosv'],
       description : 'Specifies which HiCR backend to use for the workers (i.e. processingUnits) of the examples. Default: pthreads',
       value: ['pthreads']
)

option('buildTests', type : 'boolean', value : false,
       description: 'Indicates whether to build tests'
)

option('buildExamples', type : 'boolean', value : false,
       description: 'Indicates whether to build example apps'
)

option('buildInstrumentation', type : 'boolean', value : false,
       description: 'Indicates whether to build the instrumentation using TraCR',
)

option('buildPyTaskR', type : 'boolean', value : false,
       description: 'Indicates whether to build the TaskR Python API',
)

option('compileWarningsAsErrors', type : 'boolean', value : false,
       description: 'Indicates whether a compilation warning should result in a fatal error. This is useful for CI testing but may result in inconveniences for normal users, hence it should be false by default'
) 
